<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_home_page"
        android:inputType="textCapWords"
        android:key="@string/pref_key_home_page"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_home_page"
        android:summary="@string/pref_description_home_page"/>
    <ListPreference
        android:defaultValue="google"
        android:entries="@array/pref_search_engines"
        android:entryValues="@array/pref_search_engine_values"
        android:key="@string/pref_key_search_engine"
        android:title="@string/pref_title_search_engine"
        android:summary="@string/pref_description_search_engine"/>
</PreferenceScreen>