<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="200"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmark"
        android:orderInCategory="300"
        android:title="@string/action_bookmark"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_back"
        android:orderInCategory="400"
        android:title="@string/action_back"
        android:icon="@drawable/ic_back"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_forward"
        android:orderInCategory="500"
        android:title="@string/action_forward"
        android:icon="@drawable/ic_forward"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmarks"
        android:orderInCategory="600"
        android:title="@string/action_bookmarks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="700"
        android:title="@string/action_history"
        android:icon="@drawable/ic_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2000"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />
</menu>
